# odoo-sort-manifest-depends

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE.txt  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: release.yml  test.yml
src/odoo_sort_manifest_depends/: __about__.py  __main__.py  sort_manifest_deps.py
tests/: __init__.py  test_cache.py  test_dependency_sorting.py
